# sgbench

./: .gitignore  LICENSE  README.md  pyproject.toml
conversion/: README.md  _debug.py  _psg_ids.py  convert.py  cvt_openpsg_2stage.py  cvt_pairnet.py  cvt_psgtr.py
sgbench/: __main__.py  file.py  io.py  match.py  metrics.py  pred.py  sg_eval.py  utils.py  version.py
src/sgbench/: __init__.py  __main__.py  file.py  metrics.py  pred.py
