[tool.poetry]
name = "SGBench"
version = "0.1.0"
description = "A collection of metrics for scene graph generation"
authors = ["Julian Lorenz <julian.lorenz@uni-a.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tifffile = "^2024.2.12"
imagecodecs = "^2024.1.1"
pillow = "^10.3.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
