[project]
name = "SGBench"
version = "2.0.0"
description = "A collection of metrics for scene graph generation"
authors = ["Julian Lorenz <julian.lorenz@uni-a.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://lorjul.github.io/sgbench/"
repository = "https://github.com/lorjul/sgbench"
keywords = ["scene graphs", "metrics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
io = [
    "imagecodecs>=2024.1.1",
    "pillow>=8.0.0",
    "tifffile>=2024.2.12",
]

[project.scripts]
sgbench = "sgbench.__main__:cli"
